<resources>
    <string name="app_name">ERP</string>
    <string name="app_version">1.0</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="enter_college_id">Enter College Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="studentlogin">Student Log In</string>
    <string name="stafflogin">Staff Log In</string>
    <string name="online">Online</string>
    <string name="recent_media">Recent media</string>
    <string name="add_a_caption">Add a caption</string>
    <string name="send">send</string>
    <string name="say_something">Say something</string>
    <string name="OrderNo">Order no</string>
    <string name="announce_as_">Announce as  \n</string>
    <string name="no_data_found">No data found</string>
    <string name="announcement">Announcement</string>
    <string name="searching">Searching…</string>
    <string-array name="filters">
        <item>USERID</item>
        <item>ROLLNO</item>
        <item>MARKS</item>
        <item>YEAR</item>
        <item>USERID</item>
        <item>ATTENDANCE</item>
        <item>USERID</item>

    </string-array>
    <string-array name="department">
        <item>CS</item>
        <item>EC</item>
        <item>EX</item>
        <item>ME</item>
        <item>CE</item>
        <item>D</item>
        <item>AU</item>

    </string-array>
    <string name="title_activity_bottom_nav">Home</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_announcement">Announcement</string>
    <string name="user">User</string>
    <string name="error_occurred">Error Occurred</string>
    <string name="error_occurred_detail">Try to refresh or try again after some time</string>
    <string name="foundresult">Found</string>
    <string name="invalid_rollno">Invalid last roll no</string>
    <string name="unable_to_fetch">Unable to fetch the required data   Please check both the start and last value</string>
    <string name="image">Image</string>
    <string name="uploading">Uploading…</string>
    <string name="uploaded">Uploaded</string>
    <string name="failed">Failed...</string>
    <string name="cancel_upload">Cancel this upload?</string>
    <string name="delete_upload">Delete this file?</string>
    <string name="deleted">Deleted...</string>
    <string name="include_image_click_above">Include image</string>
    <string name="filter">Filter</string>
    <string name="manually">Manually</string>
    <string name="enter_the_college_id">Enter the college ID</string>
    <string name="cs14202012">Eg CS14202012</string>
    <string name="add">Add</string>
    <string name="manually_added_ids">Manually added IDs</string>
    <string name="today">Today</string>
    <string name="enter_black_characters">Enter black characters</string>
    <string name="login">LOGIN</string>
    <string name="sign_in_your_account">Sign in your account</string>
    <string name="todo">TODO</string>
    <string name="search">Search…</string>
    <string name="profile_photo">Profile photo</string>
    <string name="gallery">Gallery</string>
    <string name="remove_photo">Remove photo</string>
    <string name="camera">Camera</string>
    <string name="title_activity_users_list_tab">UsersListTabActivity</string>
    <string name="tab_text_1">Friends</string>
    <string name="tab_text_2">Activity</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Error :Nothing found</string>
    <string name="document">Document</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow </string>
    <string name="u_more_details_u"><u>More details</u></string>
    <string name="no_results_found">No Friends Found</string>

    <string name="title_activity_show_img">ShowImg</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="update_app">An update is available with new features, a faster experience,fixes,and more. It typically takes less than 1 minute.</string>
    <string name="app_version_formated">Version: 1.0</string>
    <string name="dashboard">Dashboard</string>
    <string name="academia">ACADEMIA</string>
    <string name="events">EVENTS</string>
    <string name="general_notices">GENERAL NOTICES</string>
    <string name="rgpv_exam_result">RGPV Exam Result</string>

</resources>