<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="always|withText"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_message_black_24dp"
        app:showAsAction="ifRoom|withText"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_announcement"
        app:showAsAction="ifRoom|withText"
        
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_announcement" />
    <item
        android:id="@+id/navigation_user"
        app:showAsAction="always|withText"
        android:icon="@drawable/user"
        android:visible="false"
         android:title="@string/user" />

</menu>
