<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/enter_the_college_id"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/manuallyEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/cs14202012"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="addMaunuallyClicked"
        android:text="@string/add"
        android:textColor="#fff" />
</LinearLayout>