<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LoginTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newmitedit2"
    tools:context=".LoginNew"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:transitionName="malwaIcon"
        android:src="@drawable/applogo"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="350dp"
        android:paddingStart="32dp"
        android:orientation="vertical"
        android:layout_height="445dp"
        android:paddingEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shadow2"
        android:gravity="center_horizontal"
        tools:ignore="RtlSymmetry">


        <LinearLayout
            android:layout_width="match_parent"
             android:layout_marginTop="34dp"
            android:gravity="center_horizontal"
            android:id="@+id/log"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="20dp"
                android:id="@+id/icon"
                android:tint="#fff"
                android:src="@drawable/teacher1"
                android:layout_height="20dp" />
            <TextView
                android:id="@+id/Login"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:lineSpacingExtra="118sp"
                android:text="Student Log In"
                android:layout_marginStart="5dp"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="18sp"
                android:typeface="monospace" />




        </LinearLayout>
        <TextView
            android:id="@+id/moredetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:gravity="start"
            android:layout_gravity="start"
             android:layout_marginTop="17dp"
            android:text="@string/sign_in_your_account"
            android:textColor="#cfffffff" />

        <RelativeLayout
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:maxWidth="20dp"

            android:layout_marginTop="29dp"
            android:background="@drawable/edittextbackground">

            <android.support.design.widget.TextInputLayout
                android:layout_width="268dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                     android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical"
                     android:layout_marginStart="15dp"
                    android:background="#fff"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_college_id"
                    android:inputType="textEmailAddress"
                    android:layerType="hardware"
                    android:paddingBottom="3dp"
                    android:paddingEnd="20dp" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>




        <RelativeLayout
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittextbackground"
            android:gravity="center_vertical"
            android:paddingBottom="5dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#000">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:background="#fff"
                    android:drawablePadding="5dp"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingEnd="20dp" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:orientation="vertical"-->
             <!--android:layout_marginTop="5dp"-->
            <!--android:gravity="center"-->
            <!--android:layout_height="148dp">-->
            <RelativeLayout
                android:id="@+id/three"
                android:visibility="gone"
                android:layout_width="match_parent"
                 android:layout_height="48dp"
                android:layout_marginTop="20dp"

                 android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/edittextbackground"
                >


                <WebView
                    android:id="@+id/webview"
                    android:background="@color/White"
                    android:backgroundTint="@color/White"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:maxWidth="210dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:foregroundGravity="center"
                    tools:targetApi="lollipop">

                </WebView>
                <ProgressBar
                    android:layout_width="20dp"
                    android:id="@+id/webProgress"

                    android:layout_marginStart="20dp"
                    android:layout_height="20dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:hint="@string/enter_black_characters"
                    android:background="#00000000"
                    android:lines="1"
                    android:maxWidth="210dp"
                    android:paddingBottom="3dp"
                    android:id="@+id/capchaEdit"
                    android:textColor="@color/Black"
                    android:paddingStart="90dp"
                    android:paddingEnd="5dp"

                    android:layout_height="29dp"
                    android:gravity="clip_vertical"
                    android:inputType="textVisiblePassword"
                    android:importantForAutofill="no" tools:targetApi="o" />

                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="20dp"
                    app:srcCompat="@drawable/retry"
                    android:scaleType="center"
                    android:paddingEnd="30dp"
                    android:onClick="retryCapButtonClicked"
                    android:background="#fff"
                      android:layout_marginTop="2dp"
                    android:tint="@color/colorPrimary"
                    android:layout_marginStart="10dp"
                    android:id="@+id/retryCapButton"
                    android:visibility="gone"
                    android:contentDescription="TODO" />
            </RelativeLayout>




            <RelativeLayout
                android:id="@+id/progressbar"
                android:layout_width="124dp"
                android:layout_height="45dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"

                 android:background="@drawable/progressbar_shape"
                android:animateLayoutChanges="true"
                android:gravity="clip_horizontal">
                <TextView
                    android:layout_width="120dp"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:textColor="#fff"
                    android:id="@+id/buttonLogin"
                    android:textStyle="bold"
                    android:layout_height="45dp" />
                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:theme="@style/progresstheme"
                    />


            </RelativeLayout>
        <!--</LinearLayout>-->

    </LinearLayout>



</LinearLayout>