<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
      android:layout_height="wrap_content"
     android:id="@+id/appbar"
    android:paddingTop="@dimen/appbar_padding_top"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            app:contentInsetLeft="-10dp"
            android:layout_weight="1"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:contentInsetStart="-10dp"
            android:layout_gravity="end"
            android:gravity="end"
            app:contentInsetStartWithNavigation="0dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                 android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/back"
                    android:foreground="?attr/selectableItemBackground"                android:gravity="start|center"
                    android:onClick="endActivity"
                    android:layout_height="match_parent">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                     android:foregroundTint="#fff"
                    android:tint="#fff"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="45dp"
                    android:layout_height="45dp"

                    android:layout_marginStart="5dp"
                    android:background="@drawable/circle_img"
                    android:scaleType="fitXY"
                    android:src="@drawable/circle_img"
                    app:srcCompat="@drawable/user" />
                </LinearLayout>
                <TextView
                    android:id="@+id/title"
                     android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/back"
                     android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                    android:textColor="#fff" />

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="30dp"
                     android:layout_centerVertical="true"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                     android:onClick="searchuttonOnclick"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/ic_search_black_24dp" />
                <ImageView
                    android:id="@+id/blockList"
                    android:layout_width="30dp"
                    android:layout_centerVertical="true"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:onClick="blockListOnclick"
                     android:layout_toStartOf="@id/search"
                    android:tint="#fff"
                    app:srcCompat="@drawable/block" />

                <ImageView
                    android:id="@+id/menu"
                    android:visibility="gone"
                    android:layout_width="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:onClick="searchuttonOnclick"
                    app:srcCompat="@drawable/ic_search_black_24dp" />

                <RelativeLayout
                    android:id="@+id/searchBar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                     android:layout_centerVertical="true"
                     android:background="#fff"
                     android:visibility="invisible">

                    <ImageView
                        android:id="@+id/backSearchBar"
                        android:layout_width="30dp"
                         android:layout_height="25dp"

                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                         android:onClick="endsearch"
                         android:layout_marginStart="10dp"

                        app:srcCompat="@drawable/back" />

                    <EditText
                        android:id="@+id/searchEdit"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"

                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_toEndOf="@id/backSearchBar"
                        android:layout_toStartOf="@id/cancelsearcBar"
                        android:background="#fff"
                        android:focusable="true"
                        android:hint="@string/search"
                        android:inputType="textUri"
                        android:lines="1"
                        android:singleLine="true" />

                    <ImageView
                        android:id="@+id/cancelsearcBar"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:foregroundTint="#fff"
                        android:tint="@color/colorPrimary"
                        android:onClick="emptySearchbarClicked"
                        app:srcCompat="@drawable/cancel" />
                </RelativeLayout>
            </RelativeLayout>
         </android.support.v7.widget.Toolbar>
    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
          android:layout_width="match_parent"
        app:tabTextColor="#a4ffffff"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@color/Gray"
        app:tabSelectedTextColor="@color/White">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/tab_text_1" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_2" />



    </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

